--- a/index.html
+++ b/index.html
@@ -5,9 +5,180 @@
 </head>
 <body>
   <div id="header">
-      <span class="mdl-layout-title">title</span>
+    
+  </div>
+  <div id="grid-container">
+    <div>
+      <!-- row 1 -->
+      <div class="border-top border-left">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top">🐟</div>
+      <div class="border-top border-right">🐟</div>
+
+      <!-- row 2 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 3 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 4 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 5 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 6 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 7 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 8 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 9 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 10 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 11 -->
+      <div class="border-left">🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div>🐟</div>
+      <div class="border-right">🐟</div>
+
+      <!-- row 12 -->
+      <div class="border-left">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-bottom">🐟</div>
+      <div class="border-right border-bottom">🐟</div>
+
+    </div>
   </div>      
-  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
   <script defer src="js/index.js"></script>
