--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
   <script src="//d3js.org/d3.v3.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
   <script defer src="js/index.js"></script>
+  <script src="//d3js.org/topojson.v0.min.js"></script>
+
+  <div id="coral-map">
+    coral-map
+  </div>
 </body>
 </html>
