Add populate func

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div> 
     <div id="editor-container">
       <form action="#">
-          <input id="columns" type="text" name="rows">
-          <input id="rows" type="text" name="columns">
+          <input id="columns" type="text" name="columns" value="8">
+          <input id="rows" type="text" name="rows" value="7">
       </form>
       
       s Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel quam quis augue viverra tempor. Integer sit amet massa tellus. Etiam tincidunt nisi maximus, auctor diam feugiat, sollicitudin magna. Cras a semper neque. Sed nec efficitur eros, eu egestas neque. Phasellus euismod rhoncus ante, quis imperdiet orci interdum non. Proin imperdiet a libero non convallis. Proin et rhoncus leo. Aliquam id est eget justo molestie sagittis non nec justo. Fusce non nulla venenatis, fermentum mauris vel, maximus ante. Phasellus sodales, nunc eget venenatis pretium, lorem massa ultricies risus, at aliquet tellus nunc ut dolor. Phasellus hendrerit laoreet ipsum, vehicula gravida sapien feugiat id. Integer rhoncus nec mi eget varius. Phasellus non nisi quis nulla suscipit convallis. Nullam a magna consectetur, sodales ipsum ut, congue erat. Maecenas urna nisi, pharetra et dolor at, hendrerit ullamcorper sem.
