Substitute slider with buttons and remove visible grid

--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
       <div id="grid"></div>
     </div> 
     <div id="editor-container">
+      <h5>Change the Grid Size</h5>
       <form action="#">
           <input id="columns" type="text" name="columns" value="8">
           <input id="rows" type="text" name="rows" value="7">
       </form>
 
+      <h5>Change the Ocean's Temperature</h5>
       <div id="slider-value">Current water temperature: 25° C</div>
-      <div id="ocean-slider"></div>
-      <div id="ocean-status">Ocean temperature is optimal!</div>
-      
+      <button id="cold-temp" type="button">Too cold!</button>  <button id="tolerable-cold-temp" type="button">Slightly cold!</button> <button id="optimal-temp" type="button">Optimal!</button>  <button id="tolerable-hot-temp" type="button">Slightly hot!</button>  <button id="hot-temp" type="button">Too Hot!</button> 
+      <br><br>
       s Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel quam quis augue viverra tempor. Integer sit amet massa tellus. Etiam tincidunt nisi maximus, auctor diam feugiat, sollicitudin magna. Cras a semper neque. Sed nec efficitur eros, eu egestas neque. Phasellus euismod rhoncus ante, quis imperdiet orci interdum non. Proin imperdiet a libero non convallis. Proin et rhoncus leo. Aliquam id est eget justo molestie sagittis non nec justo. Fusce non nulla venenatis, fermentum mauris vel, maximus ante. Phasellus sodales, nunc eget venenatis pretium, lorem massa ultricies risus, at aliquet tellus nunc ut dolor. Phasellus hendrerit laoreet ipsum, vehicula gravida sapien feugiat id. Integer rhoncus nec mi eget varius. Phasellus non nisi quis nulla suscipit convallis. Nullam a magna consectetur, sodales ipsum ut, congue erat. Maecenas urna nisi, pharetra et dolor at, hendrerit ullamcorper sem.
 
       Cras rhoncus venenatis nisi id rhoncus. Phasellus vehicula enim id tortor egestas, ut vulputate enim sollicitudin. Cras sodales mauris at mattis euismod. Nam pulvinar quam ut blandit ullamcorper. Sed facilisis orci lorem, vel fermentum nisi placerat ac. Maecenas ante neque, dignissim ut est eu, auctor bibendum nisl. Proin arcu elit, convallis sed varius et, tempus et nulla.
