--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   </div>
 
   <div id="coral-map-explain" class="content-container">
-    <p>a</p>
-    <p>The map shows the reports of coral bleaching from 1983-2010.</p>
+    <p style="visibility: hidden; line-height: 0px;">a</p>
+    <p>The map shows reports of coral bleaching from 1983 throughout 2010.</p>
     <p><a href="javascript:linkUpdate(1998)">1998 coral bleaching event.</a></p>
     <p><a href="javascript:linkUpdate(2002)">2002 coral bleaching event.</a></p>
     <p><a href="javascript:linkUpdate(2005)">2005 coral bleaching event.</a></p>
