--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <body> 
   <div class="content-container">
-    <h1>Coral Reefs</h1>
-    <h2>Are Slowly Disappearing</h2> 
-    <p>Global warming isn’t just warming surface temperatures around the world, it’s also harming our reefs as ocean water temperatures rise higher and higher every year. Find out what it means for the economy, those who depend on the reefs for food, and local marine life.</p> 
+    <h1 style="margin-bottom: 0px;">Coral Reefs</h1>
+    <h2 style="margin-top: 0px; font-size: 30px;">Are Slowly Disappearing</h2> 
+    <p>Global warming isn’t just warming surface temperatures around the world, it’s also harming our reefs as ocean water temperatures rise higher and higher every year. Find out what it means for the economy, the ecosystem, those who depend on the reefs for food, and local marine life.</p> 
     <p class="author">by Alexis Koss &amp; Lisa Koss</p>
   </div>
 
@@ -18,7 +18,7 @@
   </div>
 
   <div class="content-container" id="coral-images">
-    <p>Numerous things can cause coral bleaching to occur, including small changes in ocean temperatures (colder temperatures affect coral too!), runoff and pollution, overexposure to sunlight, and extreme low tides (<a href="https://www.climatecouncil.org.au/climate-change-threat-to-reef">source</a>). Mostly driven by climate change, sea surface temperatures are rising each year and even just a small increase of 1 °C can cause global bleaching events to occur (<a href=“http://time.com/coral/“>source</a>).  The longer a bleaching event lasts, the chance for a reef to recovery rapidly diminishes.</p>
+    <p style="margin-top: 20px">Numerous things can cause coral bleaching to occur, including small changes in ocean temperatures (colder temperatures affect coral too!), runoff and pollution, overexposure to sunlight, and extreme low tides (<a href="https://www.climatecouncil.org.au/climate-change-threat-to-reef">source</a>). Mostly driven by climate change, sea surface temperatures are rising each year and even just a small increase of 1 °C can cause global bleaching events to occur (<a href=“http://time.com/coral/“>source</a>).  The longer a bleaching event lasts, the chance for a reef to recovery rapidly diminishes.</p>
     <p>Both coral and algae, called zooxanthellae, depend on each other to live. Without the algae, the coral cannot prosper and will lose it’s distinctive color. When the coral begins to be stressed, the algae will be expelled from the coral, usually due to rising water temperatures the coral cannot withstand.</p> 
     <p>When this happens, it is believed that coral programmatically kill some of their weaker cells, so they have a chance for recovery later when the bleaching event is over (<a href="https://www.simplyscuba.com/blogs/blog/why-corals-die-from-stress-in-warmer-oceans">source</a>). As soon as the algae are absent from the coral for long periods of time, the entire coral will start to turn white and very pale because it’s major food source is missing.</p>
     <div class="images">
