--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 
   <div id="coral-map-explain" class="content-container">
     <h3>Bleaching Event History</h3>
-    <p>The map shows reports of coral bleaching from 1983 throughout 2010.</p>
+    <p>Over the last few decades, many coral bleaching events have occurred worldwide, causing severe damage. Most notably, there were bleaching events during 1998, 2002, and 2005 due to higher than average summer sea surface temperatures.</p>
+    <p>The map shows reports of coral bleaching from <strong>1983</strong> throughout <strong>2010</strong>.</p>
     <div id="coral-map-slider" class="content-container"></div>
     <h2 style="clear: both">1998</h2>
     <p>During the
@@ -111,17 +112,16 @@
   </div>
 
   <div id="coral-line-explain" class="content-container">
-    <p>Over the last few decades, many coral bleaching events have occurred worldwide, causing severe damage. Most notably,
-      there were bleaching events during 1998, 2002, and 2005 due to higher than average summer sea surface temperatures.</p>
+    <p>For a more detailed look, the following line graph allows you to view the number of bleaching cases reported each year. The peaks, as seen in 1998-99, 2002, and 2005 match the reported bleaching events mentioned previously. </p>
     
-      <p><label for="bleaching">Filter Bleaching: <span id="bleaching-filter"></span></label></p>
+    <p><label for="bleaching"><strong>Filter Bleaching Severity</strong>: <span id="bleaching-filter"></span></label></p>
 
     <h2>Beyond The Data</h2>
     <p>Beyond the dataset shown across these two charts, there is a massive bleaching event currently going on from the year
       of
       <strong>2016.</strong> NOAA has declared this a global bleaching event due to record breaking ocean temperatures around the
       world. Due to the extent of the bleaching event, corals have had almost no time for recovery and reefs are rapidly
-      declining. Due to bleaching events happening so often in recent years, the future is bleak for reefs if action is not
+      declining. Because bleaching events are occuring so often in the last few years, the future is bleak for reefs if action is not
       taken immediately.</p>
 
   </div>
@@ -131,15 +131,20 @@
   </div>
 
   <div style="clear: both">
-    <h1>Coral Bleaching Simulator</h1>
+    <h1 style="margin-top: 20px">Coral Bleaching Simulator</h1>
   </div>
+
+  <div id="coral-sim-desc" class="content-container">
+      <p>The following simulator will allow you to simulate how coral bleaching takes place in the ocean that surrounds us. What happens if the temperature gets too hot? Too cold? What if the tide gets too low, what happens to the coral then? Find out below!</p>
+  </div>
+
   <div class="content-container simulation">
     <div id="grid-container">
       <div id="grid-bg"></div>
       <div id="grid"></div>
     </div>
     <div id="editor-container">
-      <h5>Simulator Controls</h5>
+      <h5 style="margin-top: 0px !important;">Simulator Controls</h5>
       <button id="start" type="button">Start</button>
 
       <h5>Change the Grid Size</h5>
