--- a/index.html
+++ b/index.html
@@ -22,16 +22,13 @@
 
   <div class="content-container" id="coral-images">
     <p style="margin-top: 20px">Numerous things can cause coral bleaching to occur, including small changes in ocean temperatures (colder temperatures
-      affect coral too!), runoff and pollution, overexposure to sunlight, and extreme low tides (
-      <a href="https://www.climatecouncil.org.au/climate-change-threat-to-reef">source</a>). Mostly driven by climate change, sea surface temperatures are rising each year and even just a small increase
-      of 1 °C can cause global bleaching events to occur (
-      <a href=“http://time.com/coral/“>source</a>). The longer a bleaching event lasts, the chance for a reef to recovery rapidly diminishes.</p>
+      affect coral too!), runoff and pollution, overexposure to sunlight, and extreme low tides (<a href="https://www.climatecouncil.org.au/climate-change-threat-to-reef">source</a>). Mostly driven by climate change, sea surface temperatures are rising each year and even just a small increase
+      of 1 °C can cause global bleaching events to occur (<a href=“http://time.com/coral/“>source</a>). The longer a bleaching event lasts, the chance for a reef to recovery rapidly diminishes.</p>
     <p>Both coral and algae, called zooxanthellae, depend on each other to live. Without the algae, the coral cannot prosper
       and will lose it’s distinctive color. When the coral begins to be stressed, the algae will be expelled from the coral,
       usually due to rising water temperatures the coral cannot withstand.</p>
     <p>When this happens, it is believed that coral programmatically kill some of their weaker cells, so they have a chance
-      for recovery later when the bleaching event is over (
-      <a href="https://www.simplyscuba.com/blogs/blog/why-corals-die-from-stress-in-warmer-oceans">source</a>). As soon as the algae are absent from the coral for long periods of time, the entire coral will start to
+      for recovery later when the bleaching event is over (<a href="https://www.simplyscuba.com/blogs/blog/why-corals-die-from-stress-in-warmer-oceans">source</a>). As soon as the algae are absent from the coral for long periods of time, the entire coral will start to
       turn white and very pale because it’s major food source is missing.</p>
     <div class="images">
       <div class='coral-container'>
@@ -58,8 +55,7 @@
     <p>If the bleaching event lasts too long, a coral will have no chance to recover. A bleached coral is not only very susceptible
       to disease, but it is also starving while the algae are expelled. Once a coral is under stress for too long of a time
       period, it will die and turn a brown, black color since the coral’s tissues have disappeared and algae have reappeared
-      to use the dead coral as a host (
-      <a href=“https://www.climatecouncil.org.au/climate-change-threat-to-reef”>source</a>).</p>
+      to use the dead coral as a host (<a href=“https://www.climatecouncil.org.au/climate-change-threat-to-reef”>source</a>).</p>
     <p>It only takes a few weeks for coral to become bleached, but can take months for an entire reef to recover back to its
       original, healthy state. No doubt, some rate of mortality will be seen as coral try to recover during their bleaching
       stage.</p>
@@ -135,7 +131,7 @@
   </div>
 
   <div id="coral-sim-desc" class="content-container">
-      <p>The following simulator will allow you to simulate how coral bleaching takes place in the ocean that surrounds us. What happens if the temperature gets too hot? Too cold? What if the tide gets too low, what happens to the coral then? Find out below!</p>
+      <p>After reading about coral bleaching, you can now use the following simulator to simulate how coral bleaching takes place in the ocean that surrounds us. What happens if the temperature gets too hot? Too cold? What if the tide gets too low, what happens to the coral then? Find out below!</p>
   </div>
 
   <div class="content-container simulation">
@@ -146,6 +142,7 @@
     <div id="editor-container">
       <h5 style="margin-top: 0px !important;">Simulator Controls</h5>
       <button id="start" type="button">Start</button>
+      <button id="stop" disabled="true" type="button">Stop</button>
 
       <h5>Change the Grid Size</h5>
       <form action="#">
@@ -160,50 +157,9 @@
       <button id="optimal-temp" type="button">Optimal!</button>
       <button id="tolerable-hot-temp" type="button">Slightly hot!</button>
       <button id="hot-temp" type="button">Too Hot!</button>
-      <br>
-      <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel quam quis augue viverra tempor. Integer sit amet
-      massa tellus. Etiam tincidunt nisi maximus, auctor diam feugiat, sollicitudin magna. Cras a semper neque. Sed nec efficitur
-      eros, eu egestas neque. Phasellus euismod rhoncus ante, quis imperdiet orci interdum non. Proin imperdiet a libero
-      non convallis. Proin et rhoncus leo. Aliquam id est eget justo molestie sagittis non nec justo. Fusce non nulla venenatis,
-      fermentum mauris vel, maximus ante. Phasellus sodales, nunc eget venenatis pretium, lorem massa ultricies risus, at
-      aliquet tellus nunc ut dolor. Phasellus hendrerit laoreet ipsum, vehicula gravida sapien feugiat id. Integer rhoncus
-      nec mi eget varius. Phasellus non nisi quis nulla suscipit convallis. Nullam a magna consectetur, sodales ipsum ut,
-      congue erat. Maecenas urna nisi, pharetra et dolor at, hendrerit ullamcorper sem. Cras rhoncus venenatis nisi id rhoncus.
-      Phasellus vehicula enim id tortor egestas, ut vulputate enim sollicitudin. Cras sodales mauris at mattis euismod. Nam
-      pulvinar quam ut blandit ullamcorper. Sed facilisis orci lorem, vel fermentum nisi placerat ac. Maecenas ante neque,
-      dignissim ut est eu, auctor bibendum nisl. Proin arcu elit, convallis sed varius et, tempus et nulla. Vestibulum sagittis
-      rhoncus augue eget porta. Morbi magna eros, vestibulum ac suscipit vitae, tristique quis diam. Nullam facilisis mauris
-      sed justo volutpat vulputate. Duis venenatis nec nisl et placerat. Proin a nisi augue. Fusce scelerisque purus urna,
-      nec rutrum arcu sodales eget. Nunc a erat nec eros sollicitudin mollis. In facilisis mi eget pellentesque aliquet.
-      Nam ornare facilisis risus, ac varius tortor faucibus non. Phasellus a auctor eros. Mauris at efficitur ligula. Fusce
-      at faucibus metus. Phasellus convallis leo sagittis, volutpat nisl id, placerat velit. Fusce mattis orci in ligula
-      consectetur, non fringilla eros aliquet. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus
-      mus. Aliquam tempus ligula id magna fermentum, quis eleifend sem mollis. Morbi varius urna id nunc viverra, quis egestas
-      tellus finibus. Cras convallis tortor id felis euismod, bibendum vehicula neque egestas. Nunc varius sem odio, eget
-      interdum lorem semper et. Nullam in maximus nibh, id molestie nunc. Fusce facilisis, tortor vel sagittis fringilla,
-      nulla lorem finibus eros, sed consectetur ante dui nec ligula. Cras scelerisque orci et lorem tempor mollis. Praesent
-      sagittis justo odio, at tincidunt felis tempus laoreet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-      vel quam quis augue viverra tempor. Integer sit amet massa tellus. Etiam tincidunt nisi maximus, auctor diam feugiat,
-      sollicitudin magna. Cras a semper neque. Sed nec efficitur eros, eu egestas neque. Phasellus euismod rhoncus ante,
-      quis imperdiet orci interdum non. Proin imperdiet a libero non convallis. Proin et rhoncus leo. Aliquam id est eget
-      justo molestie sagittis non nec justo. Fusce non nulla venenatis, fermentum mauris vel, maximus ante. Phasellus sodales,
-      nunc eget venenatis pretium, lorem massa ultricies risus, at aliquet tellus nunc ut dolor. Phasellus hendrerit laoreet
-      ipsum, vehicula gravida sapien feugiat id. Integer rhoncus nec mi eget varius. Phasellus non nisi quis nulla suscipit
-      convallis. Nullam a magna consectetur, sodales ipsum ut, congue erat. Maecenas urna nisi, pharetra et dolor at, hendrerit
-      ullamcorper sem. Cras rhoncus venenatis nisi id rhoncus. Phasellus vehicula enim id tortor egestas, ut vulputate enim
-      sollicitudin. Cras sodales mauris at mattis euismod. Nam pulvinar quam ut blandit ullamcorper. Sed facilisis orci lorem,
-      vel fermentum nisi placerat ac. Maecenas ante neque, dignissim ut est eu, auctor bibendum nisl. Proin arcu elit, convallis
-      sed varius et, tempus et nulla. Vestibulum sagittis rhoncus augue eget porta. Morbi magna eros, vestibulum ac suscipit
-      vitae, tristique quis diam. Nullam facilisis mauris sed justo volutpat vulputate. Duis venenatis nec nisl et placerat.
-      Proin a nisi augue. Fusce scelerisque purus urna, nec rutrum arcu sodales eget. Nunc a erat nec eros sollicitudin mollis.
-      In facilisis mi eget pellentesque aliquet. Nam ornare facilisis risus, ac varius tortor faucibus non. Phasellus a auctor
-      eros. Mauris at efficitur ligula. Fusce at faucibus metus. Phasellus convallis leo sagittis, volutpat nisl id, placerat
-      velit. Fusce mattis orci in ligula consectetur, non fringilla eros aliquet. Orci varius natoque penatibus et magnis
-      dis parturient montes, nascetur ridiculus mus. Aliquam tempus ligula id magna fermentum, quis eleifend sem mollis.
-      Morbi varius urna id nunc viverra, quis egestas tellus finibus. Cras convallis tortor id felis euismod, bibendum vehicula
-      neque egestas. Nunc varius sem odio, eget interdum lorem semper et. Nullam in maximus nibh, id molestie nunc. Fusce
-      facilisis, tortor vel sagittis fringilla, nulla lorem finibus eros, sed consectetur ante dui nec ligula. Cras scelerisque
-      orci et lorem tempor mollis. Praesent sagittis justo odio, at tincidunt felis tempus laoreet.
+      
+      <h5>Change the Ocean's Tides</h5>
+      <div id="tide-slider"></div>
     </div>
   </div>
 
