--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div id="coral-map-explain" class="content-container">
     <h3>Bleaching Event History</h3>
     <p>Over the last few decades, many coral bleaching events have occurred worldwide, causing severe damage. Most notably, there were bleaching events during 1998, 2002, and 2005 due to higher than average summer sea surface temperatures.</p>
-    <p>The map shows reports of coral bleaching from <strong>1983</strong> throughout <strong>2010</strong>.</p>
+    <p>The map shows reports of coral bleaching from <strong>1983</strong> throughout <strong>2010</strong>. You can hover over each data point for more information and you can also pan and zoom on the map.</p>
     <div id="coral-map-slider" class="content-container"></div>
     <h2 style="clear: both">1998</h2>
     <p>During the
@@ -108,7 +108,7 @@
   </div>
 
   <div id="coral-line-explain" class="content-container">
-    <p>For a more detailed look, the following line graph allows you to view the number of bleaching cases reported each year. The peaks, as seen in 1998-99, 2002, and 2005 match the reported bleaching events mentioned previously. </p>
+    <p>For a more detailed look, the following line graph allows you to view the number of bleaching cases reported each year. The peaks, as seen in 1998-99, 2002, and 2005 match the reported bleaching events mentioned previously. You can hover over the lines to see more detailed information about each year.</p>
     
     <p><label for="bleaching"><strong>Filter Bleaching Severity</strong>: <span id="bleaching-filter"></span></label></p>
 
