Fix spelling mistakes

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
     </p>
     <p>On a local level, coral reefs help protect the ecosystems and coastlines from damage during a storm or heavy winds. They
       prevent the coastline from eroding and washing away shelters of those who live near the water. Additionally, the reefs
-      are a huge economic asset to the communities who depend on them because they not only provide food for their families,
-      but they provide jobs by selling the marine life that they catch. Without the reefs, marine life would disappear, as
-      their shelter would be missing, putting those who use the reefs as an income and food source at risk. Reefs also bring
+      are a huge economic asset to the communities who depend on them because they not only provide food for those communities' families,
+      but they also provide jobs to those who sell the marine life that they catch. Without the reefs, marine life would disappear, as
+      their shelter would be missing, thus putting those who use the reefs as an income and food source at risk. Reefs also bring
       in billions of dollars annually for tourism and allows those countries’ economies to thrive.</p>
     <p>But what if you don’t live in a community that depends on coral reefs? Reefs are still important to those that don’t
       depend on them! Despite coral reefs making up less than 1 percent of the world’s species population, they have extremely
@@ -241,7 +241,7 @@
         <p>Medical Advancements</p>
       </div>
     </div>
-    <p>Regardless of where you are in the world, if the reefs disappear, they will leave on impact on your life.</p>
+    <p>Regardless of where you are in the world, if the reefs disappear, they will leave an impact on your life.</p>
 
     <p>
       <a href="https://www.youtube.com/watch?v=7-DQNTKOO1M">Source.</a>
@@ -251,8 +251,8 @@
     <p>After viewing and simulating what coral bleaching is all about, you may be wondering how you can help. Coral bleaching
       can be caused by a number of things, as discussed earlier, but climate change is the number one cause.
       <p>
-        <p>To help reduce your carbon footprint to reduce greenhouse gases in the atmosphere, which are ultimately responsible
-          for the rise in temperatures both on land and in the ocean, try the following tips:</p>
+        <p>Reducing your carbon footprint is important in helping to reduce greenhouse gases in the atmosphere, which are ultimately responsible
+          for the rise in temperatures both on land and in the ocean. Try the following tips to help reduce your carbon footprint:</p>
         <ul>
           <li>
             <strong>Driving.</strong> When possible, try to walk, bike, or take public transportation to reduce the release of carbon
