--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
         <p>Healthy</p>
       </div>
       <div class='coral-container'>
-        <img class="coral-img" src="/images/stressed.png">
+        <img class="coral-img" src="images/stressed.png">
         <p>Stressed</p>
       </div>
       <div class='coral-container'>
-        <img class="coral-img" src="/images/bleached.png">
+        <img class="coral-img" src="images/bleached.png">
         <p>Bleached</p>
       </div>
       <div class='coral-container'>
-        <img class="coral-img" src="/images/dead.png">
+        <img class="coral-img" src="images/dead.png">
         <p>Dead</p>
       </div>
     </div>
@@ -222,22 +222,22 @@
       But if the reefs disappear, they won’t ever be able to confirm or deny their hypotheses.</p>
     <div class="images">
       <div class='future-container'>
-        <img class="future-img" src="/images/healthy.png" width="100px">
+        <img class="future-img" src="images/healthy.png" width="100px">
         <p>Healthy Corals</p>
       </div>
       <div class="future-container">
         <p style="font-size: 100px">=</p>
       </div>
       <div class='future-container'>
-        <img class="future-img" src="/images/fishes.png" width="100px">
+        <img class="future-img" src="images/fishes.png" width="100px">
         <p>Marine Life</p>
       </div>
       <div class='future-container'>
-        <img class="future-img" src="/images/money-bag.png" width="100px">
+        <img class="future-img" src="images/money-bag.png" width="100px">
         <p>Income</p>
       </div>
       <div class='future-container'>
-        <img class="future-img" src="/images/syringe.png" width="100px">
+        <img class="future-img" src="images/syringe.png" width="100px">
         <p>Medical Advancements</p>
       </div>
     </div>
@@ -275,21 +275,21 @@
 
         <div class="images">
             <div class='carbon-container'>
-              <img class="carbon-img" src="/images/happy-you.png" width="100px">
+              <img class="carbon-img" src="images/happy-you.png" width="100px">
               <p>Environmentally Conscious You</p>
             </div>
             <div class="carbon-container">
               <p style="font-size: 100px">=</p>
             </div>
             <div class='carbon-container'>
-              <img class="carbon-img" src="/images/earth-globe.png" width="100px">
+              <img class="carbon-img" src="images/earth-globe.png" width="100px">
               <p>Happy World</p>
             </div>
             <div class="carbon-container">
                 <p style="font-size: 100px">=</p>
               </div>
               <div class='carbon-container'>
-                <img class="carbon-img" src="/images/healthy.png" width="100px">
+                <img class="carbon-img" src="images/healthy.png" width="100px">
                 <p>Healthy Reefs</p>
               </div>
           </div>
